--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <title>Meor || Front End Developer</title>
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <base href="/">
 
         <!-- Link -->
